--- a/config.json
+++ b/config.json
@@ -59,7 +59,7 @@
         // Use views/unauthorized.hbs for error page.
         "errorTemplate": true,
         // Public URL to production app.
-        "localBaseUrl": "https://slide-macro.herokuapp.com",
+        "localBaseUrl": "$VERCEL_URL",
         "store": {
             // Don't use memory storage for production, otherwise
             // data in the storage will go away when the app server restarts.
