build: vercel config change

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,18 @@
 {
-    "version": 2,
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "app.js"
+  "version": 2,
+  "builds": [
+    {
+      "src": "app.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["public/**"]
       }
-    ]
-  }
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "app.js"
+    }
+  ]
+}
