build: vercel simple node config

--- a/vercel.json
+++ b/vercel.json
@@ -4,15 +4,12 @@
     {
       "src": "app.js",
       "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["public/**","routes/**","views/**"]
-      }
     }
   ],
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "app.js"
+      "destination": "/"
     }
   ]
 }
