--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,11 @@
       "use": "@vercel/node"
     }
   ],
+  "outputDirectory": ".",
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/"
+      "destination": "app.js"
     }
   ]
 }
