--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
     },
     "rules": {
         "no-console": "off",
-        "no-unused-vars": ["error", {"argsIgnorePattern": "^_", "varsIgnorePattern": "^_"}],
+        "no-unused-vars": "off",
         "react/prop-types": "off"
     },
     "settings": {
