--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "ReactDOM"
   },
   "scripts": {
+    "vercel-build": "node build.js",
+    "deploy:vercel": "vercel deploy --prod",
     "start": "node -r esm app.js",
     "watch-server": "nodemon -e js -r esm app.js",
     "watch-jsx-browser": "parcel watch --log-level 1 --no-hmr --global __root_component --out-dir views views/*.jsx",
@@ -25,6 +27,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^16.0.3",
     "errorhandler": "^1.5.1",
     "esm": "^3.2.25",
     "express": "^4.17.1",
@@ -32,7 +35,7 @@
     "helmet": "^4.1.1",
     "morgan": "^1.10.0",
     "nocache": "^2.1.0",
-    "pg": "^8.7.3",
+    "pg": "^8.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sequelize": "^6.3.5",
@@ -49,6 +52,6 @@
     "nodemon": "^2.0.4",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-externals": "^0.5.1",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.1.2"
   }
 }
