--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "helmet": "^4.1.1",
     "morgan": "^1.10.0",
     "nocache": "^2.1.0",
+    "node-fetch": "^2.6.11",
     "pg": "^8.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-is": "^18.2.0",
     "sequelize": "^6.3.5",
     "styled-components": "^5.2.0"
   },
